@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2011-2023 Thomas Akehurst
+ * Copyright (C) 2011-2024 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,45 +18,44 @@ package com.github.tomakehurst.wiremock;
 import static com.github.tomakehurst.wiremock.client.WireMock.*;
 import static com.github.tomakehurst.wiremock.testsupport.Network.findFreePort;
 import static com.github.tomakehurst.wiremock.testsupport.TestHttpHeader.withHeader;
-import static com.google.common.collect.Iterables.any;
 import static java.io.File.separator;
 import static java.net.HttpURLConnection.HTTP_OK;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.nio.file.Files.createDirectories;
 import static java.nio.file.Files.write;
 import static java.util.Arrays.asList;
+import static java.util.Objects.requireNonNull;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.allOf;
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.core.Options;
+import com.github.tomakehurst.wiremock.junit5.EnabledIfJettyVersion;
 import com.github.tomakehurst.wiremock.standalone.MappingFileException;
 import com.github.tomakehurst.wiremock.standalone.WireMockServerRunner;
 import com.github.tomakehurst.wiremock.testsupport.MappingJsonSamples;
 import com.github.tomakehurst.wiremock.testsupport.WireMockResponse;
 import com.github.tomakehurst.wiremock.testsupport.WireMockTestClient;
 import java.io.*;
-import java.nio.charset.Charset;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Objects;
 import java.util.function.Predicate;
+import java.util.stream.Stream;
 import java.util.zip.GZIPInputStream;
-import org.apache.commons.io.FileUtils;
 import org.hamcrest.Description;
 import org.hamcrest.Matcher;
 import org.hamcrest.TypeSafeMatcher;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
 public class StandaloneAcceptanceTest {
   private static final String FILES = "__files";
@@ -80,9 +79,10 @@ public class StandaloneAcceptanceTest {
   @BeforeEach
   public void init() throws Exception {
     if (FILE_SOURCE_ROOT.exists()) {
-      FileUtils.deleteDirectory(FILE_SOURCE_ROOT);
+      try (Stream<Path> pathStream = Files.walk(FILE_SOURCE_ROOT.toPath().toAbsolutePath())) {
+        pathStream.sorted(Comparator.reverseOrder()).map(Path::toFile).forEach(File::delete);
+      }
     }
-
     FILE_SOURCE_ROOT.mkdirs();
 
     mappingsDirectory = new File(FILE_SOURCE_ROOT, MAPPINGS);
@@ -104,7 +104,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void acceptsMappingRequestOnDefaultPort() throws Exception {
+  void acceptsMappingRequestOnDefaultPort() {
     startRunner();
     givenThat(
         get(urlEqualTo("/standalone/test/resource"))
@@ -125,14 +125,14 @@ public class StandaloneAcceptanceTest {
           + "}													";
 
   @Test
-  public void readsMappingFromMappingsDir() {
+  void readsMappingFromMappingsDir() {
     writeMappingFile("test-mapping-1.json", MAPPING_REQUEST);
     startRunner();
     assertThat(testClient.get("/resource/from/file").content(), is("Body from mapping file"));
   }
 
   @Test
-  public void readsMappingFromSpecifiedRecordingsPath() {
+  void readsMappingFromSpecifiedRecordingsPath() {
     String differentRoot = FILE_SOURCE_ROOT + separator + "differentRoot";
     writeFile(differentRoot + separator + underMappings("test-mapping-1.json"), MAPPING_REQUEST);
     startRunner("--root-dir", differentRoot);
@@ -140,7 +140,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void servesFileFromFilesDir() {
+  void servesFileFromFilesDir() {
     writeFileToFilesDir("test-1.xml", "<content>Blah</content>");
     startRunner();
     WireMockResponse response = testClient.get("/test-1.xml");
@@ -150,7 +150,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void servesFileFromSpecifiedRecordingsPath() {
+  void servesFileFromSpecifiedRecordingsPath() {
     String differentRoot = FILE_SOURCE_ROOT + separator + "differentRoot";
     writeFile(differentRoot + separator + underFiles("test-1.xml"), "<content>Blah</content>");
     startRunner("--root-dir", differentRoot);
@@ -161,17 +161,22 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void servesFileAsJsonWhenNoFileExtension() {
+  void servesFileAsJsonWhenNoFileExtension() {
     writeFileToFilesDir("json/12345", "{ \"key\": \"value\" }");
     startRunner();
     WireMockResponse response = testClient.get("/json/12345");
     assertThat(response.statusCode(), is(200));
     assertThat(response.content(), is("{ \"key\": \"value\" }"));
-    assertThat(response.firstHeader("Content-Type"), is("application/json"));
+    // The "Content-Type" header may include charset, fe "application/json;charset=utf-8"
+    assertThat(response.firstHeader("Content-Type"), startsWith("application/json"));
   }
 
+  @EnabledIfJettyVersion(
+      major = 11,
+      reason =
+          "Jetty 12 and above always redirects when folder (without trailing slash) is accessed")
   @Test
-  public void shouldNotSend302WhenPathIsDirAndTrailingSlashNotPresent() {
+  void shouldNotSend302WhenPathIsDirAndTrailingSlashNotPresent() {
     writeFileToFilesDir(
         "json/wire & mock directory/index.json", "{ \"key\": \"index page value\" }");
     startRunner();
@@ -180,18 +185,32 @@ public class StandaloneAcceptanceTest {
     assertThat(response.content(), is("{ \"key\": \"index page value\" }"));
   }
 
+  @EnabledIfJettyVersion(
+      major = 12,
+      reason =
+          "Jetty 12 and above always redirects when folder (without trailing slash) is accessed")
   @Test
-  public void servesJsonIndexFileWhenTrailingSlashPresent() {
+  public void shouldSend302WhenPathIsDirAndTrailingSlashNotPresent() {
+    writeFileToFilesDir(
+        "json/wire & mock directory/index.json", "{ \"key\": \"index page value\" }");
+    startRunner();
+    WireMockResponse response = testClient.get("/json/wire%20&%20mock%20directory");
+    assertThat(response.statusCode(), is(302));
+  }
+
+  @Test
+  void servesJsonIndexFileWhenTrailingSlashPresent() {
     writeFileToFilesDir("json/23456/index.json", "{ \"key\": \"new value\" }");
     startRunner();
     WireMockResponse response = testClient.get("/json/23456/");
     assertThat(response.statusCode(), is(200));
     assertThat(response.content(), is("{ \"key\": \"new value\" }"));
-    assertThat(response.firstHeader("Content-Type"), is("application/json"));
+    // The "Content-Type" header may include charset, fe "application/json;charset=utf-8"
+    assertThat(response.firstHeader("Content-Type"), startsWith("application/json"));
   }
 
   @Test
-  public void servesXmlIndexFileWhenTrailingSlashPresent() {
+  void servesXmlIndexFileWhenTrailingSlashPresent() {
     writeFileToFilesDir("json/34567/index.xml", "<blob>BLAB</blob>");
     startRunner();
     WireMockResponse response = testClient.get("/json/34567/");
@@ -201,7 +220,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void doesNotServeFileFromFilesDirWhenNotGET() {
+  void doesNotServeFileFromFilesDirWhenNotGET() {
     writeFileToFilesDir("json/should-not-see-this.json", "{}");
     startRunner();
     WireMockResponse response = testClient.put("/json/should-not-see-this.json");
@@ -255,7 +274,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void startsOnPortSpecifiedOnCommandLine() throws Exception {
+  public void startsOnPortSpecifiedOnCommandLine() {
     int port = findFreePort();
     startRunner("--port", "" + port);
     WireMock client = WireMock.create().host("localhost").port(port).build();
@@ -266,7 +285,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void proxiesToHostSpecifiedOnCommandLine() throws Exception {
+  void proxiesToHostSpecifiedOnCommandLine() {
     WireMock otherServerClient = startOtherServerAndClient();
     otherServerClient.register(
         get(urlEqualTo("/proxy/ok?working=yes")).willReturn(aResponse().withStatus(HTTP_OK)));
@@ -277,7 +296,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void respondsWithPreExistingRecordingInProxyMode() throws Exception {
+  void respondsWithPreExistingRecordingInProxyMode() {
     writeMappingFile("test-mapping-2.json", BODY_FILE_MAPPING_REQUEST);
     writeFileToFilesDir("body-test.xml", "Existing recorded body");
 
@@ -292,7 +311,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void recordsProxiedRequestsWhenSpecifiedOnCommandLine() throws Exception {
+  void recordsProxiedRequestsWhenSpecifiedOnCommandLineViaLegacyRecorder() throws Exception {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--record-mappings");
     givenThat(
@@ -311,7 +330,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void recordsRequestHeadersWhenSpecifiedOnCommandLine() throws Exception {
+  void recordsRequestHeadersWhenSpecifiedOnCommandLineViaLegacyRecorder() throws Exception {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--record-mappings", "--match-headers", "Accept");
     givenThat(
@@ -329,7 +348,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void recordsGzippedResponseBodiesDecompressed() throws Exception {
+  void recordsGzippedResponseBodiesDecompressedViaLegacyRecorder() {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--record-mappings");
     givenThat(
@@ -346,7 +365,27 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void matchesVeryLongHeader() {
+  void recordsGzippedResponseBodiesDecompressedViaNewRecorder(@TempDir Path tempFileRoot) {
+    WireMock target = startOtherServerAndClient();
+
+    startRunner("--root-dir", tempFileRoot.toString());
+
+    target.register(get("/record-this").willReturn(ok("Recorded")));
+
+    startRecording(otherServer.baseUrl());
+    testClient.get("/record-this");
+    stopRecording();
+
+    assertThat(
+        Arrays.stream(requireNonNull(tempFileRoot.resolve("mappings").toFile().list()))
+            .filter(name -> name.contains("record-this"))
+            .findFirst()
+            .orElse(""),
+        endsWith(".json"));
+  }
+
+  @Test
+  void matchesVeryLongHeader() {
     startRunner("--jetty-header-buffer-size", "32678");
 
     String veryLongHeader = padRight("", 16336).replace(' ', 'h');
@@ -362,7 +401,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void performsBrowserProxyingWhenEnabled() throws Exception {
+  void performsBrowserProxyingWhenEnabled() {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--enable-browser-proxying");
     otherServerClient.register(
@@ -377,14 +416,14 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void doesNotRecordRequestWhenNotProxied() {
+  void doesNotRecordRequestWhenNotProxied() {
     startRunner("--record-mappings");
     testClient.get("/try-to/record-this");
     assertThat(mappingsDirectory, doesNotContainAFileWithNameContaining("try-to-record"));
   }
 
   @Test
-  public void doesNotRecordRequestWhenAlreadySeen() {
+  void doesNotRecordRequestWhenAlreadySeen() {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--record-mappings");
     givenThat(
@@ -401,7 +440,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void canBeShutDownRemotely() {
+  void canBeShutDownRemotely() {
     startRunner();
 
     WireMock.shutdownServer();
@@ -417,7 +456,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void canBeShutDownRemotelyWhenAsyncResponsesEnabled() {
+  void canBeShutDownRemotelyWhenAsyncResponsesEnabled() {
     startRunner("--async-response-enabled");
 
     stubFor(get("/delay-this").willReturn(ok().withFixedDelay(50)));
@@ -438,7 +477,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void isRunningReturnsFalseBeforeRunMethodIsExecuted() {
+  void isRunningReturnsFalseBeforeRunMethodIsExecuted() {
     runner = new WireMockServerRunner();
     assertThat(runner.isRunning(), is(false));
   }
@@ -456,7 +495,7 @@ public class StandaloneAcceptanceTest {
           + "}													";
 
   @Test
-  public void failsWithUsefulErrorMessageWhenMappingFileIsInvalid() {
+  void failsWithUsefulErrorMessageWhenMappingFileIsInvalid() {
     writeMappingFile("bad-mapping.json", BAD_MAPPING);
 
     MappingFileException exception = assertThrows(MappingFileException.class, this::startRunner);
@@ -484,11 +523,12 @@ public class StandaloneAcceptanceTest {
   }
 
   private String contentsOfFirstFileNamedLike(String namePart) throws IOException {
-    return FileUtils.readFileToString(firstFileWithNameLike(mappingsDirectory, namePart), UTF_8);
+    return Files.readString(
+        requireNonNull(firstFileWithNameLike(mappingsDirectory, namePart)).toPath());
   }
 
   private File firstFileWithNameLike(File directory, String namePart) {
-    for (File file : directory.listFiles(namedLike(namePart))) {
+    for (File file : requireNonNull(directory.listFiles(namedLike(namePart)))) {
       return file;
     }
 
@@ -559,7 +599,7 @@ public class StandaloneAcceptanceTest {
   }
 
   private String[] argsWithRecordingsPath(String[] args) {
-    List<String> argsAsList = new ArrayList<String>(asList(args));
+    List<String> argsAsList = new ArrayList<>(asList(args));
     if (!argsAsList.contains("--root-dir")) {
       argsAsList.addAll(asList("--root-dir", FILE_SOURCE_ROOT.getPath()));
     }
@@ -567,7 +607,7 @@ public class StandaloneAcceptanceTest {
   }
 
   private String[] argsWithPort(String[] args) {
-    List<String> argsAsList = new ArrayList<String>(asList(args));
+    List<String> argsAsList = new ArrayList<>(asList(args));
     if (!argsAsList.contains("--port")) {
       argsAsList.addAll(asList("--port", "" + Options.DYNAMIC_PORT));
     }
@@ -583,15 +623,15 @@ public class StandaloneAcceptanceTest {
   }
 
   private String systemOutText() {
-    return new String(out.toByteArray());
+    return out.toString();
   }
 
   private String systemErrText() {
-    return new String(err.toByteArray());
+    return err.toString();
   }
 
   private Matcher<File> containsAFileContaining(final String expectedContents) {
-    return new TypeSafeMatcher<File>() {
+    return new TypeSafeMatcher<>() {
 
       @Override
       public void describeTo(Description desc) {
@@ -600,9 +640,9 @@ public class StandaloneAcceptanceTest {
 
       @Override
       public boolean matchesSafely(File dir) {
-        for (File file : dir.listFiles()) {
+        for (File file : requireNonNull(dir.listFiles())) {
           try {
-            if (FileUtils.readFileToString(file, UTF_8).contains(expectedContents)) {
+            if (Files.readString(file.toPath()).contains(expectedContents)) {
               return true;
             }
           } catch (IOException e) {
@@ -616,7 +656,7 @@ public class StandaloneAcceptanceTest {
   }
 
   private Matcher<File> doesNotContainAFileWithNameContaining(final String namePart) {
-    return new TypeSafeMatcher<File>() {
+    return new TypeSafeMatcher<>() {
 
       @Override
       public void describeTo(Description desc) {
@@ -625,13 +665,13 @@ public class StandaloneAcceptanceTest {
 
       @Override
       public boolean matchesSafely(File dir) {
-        return !any(asList(dir.list()), contains(namePart)::test);
+        return Arrays.stream(requireNonNull(dir.list())).noneMatch(contains(namePart));
       }
     };
   }
 
   private Matcher<File> containsExactlyOneFileWithNameContaining(final String namePart) {
-    return new TypeSafeMatcher<File>() {
+    return new TypeSafeMatcher<>() {
 
       @Override
       public void describeTo(Description desc) {
@@ -640,8 +680,7 @@ public class StandaloneAcceptanceTest {
 
       @Override
       public boolean matchesSafely(File dir) {
-        return (int)
-                Arrays.stream(Objects.requireNonNull(dir.list())).filter(contains(namePart)).count()
+        return (int) Arrays.stream(requireNonNull(dir.list())).filter(contains(namePart)).count()
             == 1;
       }
     };
@@ -665,12 +704,12 @@ public class StandaloneAcceptanceTest {
 
       byte[] buf = new byte[8192];
 
-      int read = -1;
+      int read;
       while ((read = gin.read(buf)) != -1) {
         baos.write(buf, 0, read);
       }
 
-      return new String(baos.toByteArray(), Charset.forName(UTF_8.name()));
+      return baos.toString(UTF_8);
 
     } catch (IOException e) {
       return null;
@@ -678,8 +717,8 @@ public class StandaloneAcceptanceTest {
       if (gin != null)
         try {
           gin.close();
-        } catch (IOException e) {
-
+        } catch (IOException ignored) {
+          // ignored
         }
     }
   }
