@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2023 Thomas Akehurst
+ * Copyright (C) 2017-2024 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -33,7 +33,6 @@ import com.github.tomakehurst.wiremock.extension.responsetemplating.ResponseTemp
 import com.github.tomakehurst.wiremock.http.Request;
 import com.github.tomakehurst.wiremock.http.ResponseDefinition;
 import com.github.tomakehurst.wiremock.testsupport.MockWireMockServices;
-import com.google.common.collect.ImmutableMap;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -63,7 +62,7 @@ public class HandlebarsJsonPathHelperTest extends HandlebarsHelperTestBase {
   }
 
   @Test
-  public void incluesAnErrorInTheResponseBodyWhenTheJsonPathIsInvalid() {
+  public void includesAnErrorInTheResponseBodyWhenTheJsonPathIsInvalid() {
     final ResponseDefinition responseDefinition =
         transform(
             transformer,
@@ -119,8 +118,7 @@ public class HandlebarsJsonPathHelperTest extends HandlebarsHelperTestBase {
                         + "}"),
             aResponse()
                 .withBody(
-                    ""
-                        + "{{#each (jsonPath request.body '$.items') as |value key|}}{{key}}: {{value}} {{/each}}"));
+                    "{{#each (jsonPath request.body '$.items') as |value key|}}{{key}}: {{value}} {{/each}}"));
 
     assertThat(responseDefinition.getBody(), is("one: 1 two: 2 three: 3 "));
   }
@@ -142,8 +140,7 @@ public class HandlebarsJsonPathHelperTest extends HandlebarsHelperTestBase {
                         + "}"),
             aResponse()
                 .withBody(
-                    ""
-                        + "{{#if (jsonPath request.body '$.items.one')}}One{{/if}}\n"
+                    "{{#if (jsonPath request.body '$.items.one')}}One{{/if}}\n"
                         + "{{#if (jsonPath request.body '$.items.two')}}Two{{/if}}"));
 
     assertThat(responseDefinition.getBody(), containsString("One"));
@@ -268,6 +265,11 @@ public class HandlebarsJsonPathHelperTest extends HandlebarsHelperTestBase {
   }
 
   @Test
+  public void rendersAnEmptyStringWhenJsonIsEmptyString() {
+    testHelperError(helper, "", "$.test", is(""));
+  }
+
+  @Test
   public void rendersAMeaningfulErrorWhenJsonPathIsNull() {
     testHelperError(
         helper, "{\"test\":\"success}", null, is("[ERROR: The JSONPath cannot be empty]"));
@@ -289,8 +291,7 @@ public class HandlebarsJsonPathHelperTest extends HandlebarsHelperTestBase {
                               ResponseDefinition responseDefinition,
                               FileSource files,
                               Parameters parameters) {
-                            return ImmutableMap.<String, Object>of(
-                                "mapData", ImmutableMap.of("things", "abc"));
+                            return Map.of("mapData", Map.of("things", "abc"));
                           }
                         }));
 
@@ -339,7 +340,7 @@ public class HandlebarsJsonPathHelperTest extends HandlebarsHelperTestBase {
   }
 
   @Test
-  public void helperCanBeCalledDirectlyWithoutSupplyingRenderCache() throws Exception {
+  public void helperCanBeCalledDirectlyWithoutSupplyingRequestCache() throws Exception {
     Context context = Context.newBuilder(null).build();
     Options options =
         new Options(
@@ -351,7 +352,7 @@ public class HandlebarsJsonPathHelperTest extends HandlebarsHelperTestBase {
             null,
             new Object[] {"$.stuff"},
             null,
-            new ArrayList<String>(0));
+            new ArrayList<>(0));
 
     Object result = helper.apply("{\"stuff\":1}", options);
 
